<resources>
    <string name="app_name">Ride On Time</string>

    <string name="title_favorites">View Favorites</string>
    <string name="title_details">View Details</string>
    <string name="title_share">Share</string>
    <string name="save_favorite">Save as favorite</string>

    <string name="LOGIN_PREFS">tcss450.uw.edu.team12.PREFS</string>

    <!--login and logout-->
    <string name="LOGGEDIN">loggedin</string>
    <string name="password_hint">Enter your password</string>
    <string name="email_hint">Enter your email address</string>
    <string name="sign_in">Sign in</string>
    <string name="action_logout">Logout</string>
    <string name="LOGIN_FILE">tcss450.uw.edu.team12.LOGIN_FILE</string>

    <string name="action_settings">Settings</string>
    <string name="action_favorites">Favorite Stops</string>

    <!--register strings-->
    <string name="create_user">Enter a valid email address</string>
    <string name="create_password">Enter a password (6+ characters)</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="register">Register</string>
    <string name="hint_search">Enter stop ID&#8230;</string>
    <string name="mfp_fav">Add to favorites</string>
    <string name="mfp_fav2">Remove from favorites</string> <!-- CHANGE THIS LATER -->
    <string name="transit_alerts">Transit Alerts</string>
    <string name="fav_stops">Favorite Stops</string>
    <string name="connection_error">Connection Error</string>
    <string name="xml_error">XML Error</string>
    <string name="share_bus_arrival">Share Content</string>
    <string name="route_head_desc">An ImageView that holds bus stop name</string>

</resources>
