<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tcss450.uw.edu.team12.authenticate.RegisterFragment">

    <EditText
        android:id="@+id/register_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_user"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/register_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_password"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/register_confirm_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/register_user"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"/>


</LinearLayout>
