<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="tcss450.uw.edu.team12.MainActivity">

    <!--<item-->
    <!--android:id="@+id/action_settings"-->
    <!--android:orderInCategory="100"-->
    <!--android:title="@string/action_settings"-->
    <!--app:showAsAction="never" />-->

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="100"
        android:title="@string/action_favorites"
        app:showAsAction="never" />

    <item
        android:id="@+id/alerts_updates"
        android:orderInCategory="100"
        android:title="@string/transit_alerts"
        app:showAsAction="never" />


    <item
    android:id="@+id/action_logout"
    android:orderInCategory="100"
    android:title="@string/action_logout"
    app:showAsAction="ifRoom"/>


</menu>